# mclauncher

./: .gitignore  Cargo.toml  README.md
.zed/: tasks.json
crates/launcher_ui/: Cargo.toml
crates/launcher_ui/src/: console.rs  install_activity.rs  lib.rs  notification.rs  privacy.rs  window_effects.rs
crates/launcher_ui/src/assets/: mod.rs
crates/launcher_ui/src/screens/: console.rs  content_browser.rs  content_browser_install.rs  content_browser_ui.rs  discover.rs  home.rs  home_screenshots.rs  home_server_ping.rs  instance.rs  instance_exports.rs  instance_screenshots.rs  library.rs  mod.rs  settings.rs  skins.rs
crates/launcher_ui/src/screens/home_screenshots/: screenshot_candidate.rs
crates/launcher_ui/src/screens/instance/: content.rs  content_actions.rs  content_lookup_result.rs  installed_content_cache.rs  installed_entry_render_result.rs  instance_screen_output.rs  instance_screen_state.rs  runtime.rs  runtime_prepare_operation.rs  runtime_prepare_outcome.rs
crates/launcher_ui/src/screens/screens/: player_auth_context.rs
crates/launcher_ui/src/ui/: color.rs  mod.rs  modal.rs  text_input_theme.rs  theme.rs  toggle_anim.rs  top_bar.rs
crates/launcher_ui/src/ui/components/: icon_button.rs  image_textures.rs  lazy_image_bytes.rs  mod.rs  remote_tiled_image.rs  settings_widgets.rs  text_helpers.rs  virtual_masonry.rs
crates/launcher_ui/src/ui/sidebar/: app_nav.rs  mod.rs  profiles.rs
crates/vertexlauncher/: Cargo.toml  build.rs
crates/vertexlauncher/src/: main.rs
crates/vertexlauncher/src/app/: app_core.rs  app_icon.rs  app_metadata.rs  auth_state.rs  cli.rs  config_format_modal.rs  create_instance_modal.rs  import_instance_modal.rs  mod.rs  native_options.rs  taskbar_progress.rs
crates/vertexlauncher/src/app/import_instance_modal/: package_import.rs  package_import_curseforge.rs
crates/vertexlauncher/src/app/tracing_setup/: app_log_layer.rs
crates/vertexlauncher/src/app/webview_sign_in/: desktop.rs
crates/vertexlauncher/src/screens/: instance.rs
crates/vertexlauncher/src/ui/: mod.rs
scripts/: build-appimage-x86_64-container.sh  build-flatpak-arm64-container.sh  (+6 more)
(+95 files in other folders)
