[package]
name = "launcher_ui"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe.workspace = true
egui.workspace = true
serde.workspace = true
config.workspace = true
instances.workspace = true
installation.workspace = true
modprovider.workspace = true
modrinth.workspace = true
curseforge.workspace = true
textui.workspace = true
launcher_runtime.workspace = true
toml.workspace = true
raw-window-handle = "0.6.2"
tracing.workspace = true
auth.workspace = true
image.workspace = true
rfd = "0.15.4"
bytemuck = { version = "1.24.0", features = ["derive"] }
ureq = { version = "2.12.1", features = ["json"] }
flate2 = "1.1.5"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_Graphics_Dwm", "Win32_System_SystemInformation"] }

[target.'cfg(target_os = "linux")'.dependencies]
x11-dl = "2.21.0"
wayland-backend = { version = "0.3.11", features = ["client_system"] }
wayland-client = "0.31.12"
wayland-protocols-plasma = { version = "0.3.10", default-features = false, features = ["client"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2.7"
