[package]
name = "vertexlauncher"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe.workspace = true
egui.workspace = true
egui_extras.workspace = true
fontloader.workspace = true
config.workspace = true
textui.workspace = true
auth.workspace = true
instances.workspace = true
installation.workspace = true
launcher_runtime.workspace = true
launcher_ui.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
humantime.workspace = true
rfd = "0.15.4"

[target.'cfg(target_os = "windows")'.dependencies]
wry = "*"
tao = "*"
raw-window-handle = "0.6.2"
windows = { version = "0.61.3", features = ["Win32_Foundation", "Win32_System_Com", "Win32_UI_Shell"] }

[target.'cfg(target_os = "linux")'.dependencies]
wry = "*"
tao = "*"

[target.'cfg(target_os = "macos")'.dependencies]
wry = "*"
tao = "*"
